css alignment fixes

--- a/main.css
+++ b/main.css
@@ -157,10 +157,14 @@ section.cover p {
     cursor: pointer;
 }
 
+.tech-logo-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .tech-logo {
     max-width: 90px;
-    margin-right: 1rem;
-    margin-bottom: 1rem;
+    margin: 0.3rem;
     padding: 0.4rem;
     position: relative;
     text-align: center;
